Correctly emit notifications for messages recieved in an active chat

BUG: 310946
Fixed-In: 0.5.2